# ScienceFinder

./: .gitignore  LICENSE  README.md  app.py  package-lock.json  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: main.yaml
keyword_model/keyword_extract/: key_word_extractor.py  model_strategy.py
keyword_model/model/: model.py
keyword_model/pdf_orm_parser/: pdf_parser.py
src/: App.js
src/components/: ArticleCard.js  FileHistoryItem.js  FileItem.js  FilterInput.js  SearchBar.js  Tag.js
src/pages/: ArticleAnalytics.js  Articles.js  ScienceFinderUpload.js
src/styles/: ArticleAnalytics.module.css  Articles.module.css  FileHistoryItem.module.css  FilterInput.module.css  ScienceFinderUpload.module.css  Tag.module.css
static/: scripts.js
templates/: index.html
