[metadata]
name = "ScienceFinder"
author = "Engelsgeduld, Andreev Sergey"
url = "https://github.com/andreev-sergej/ScienceFinder"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.mypy]
files = ["."]
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
warn_no_return = "False"
no_implicit_optional = "False"
